metadata/force-app/main/default/objects/CustomName_phcCE__c/CustomName_phcCE__c.object-meta.xml
<CustomObject>
    <description>Description_ciKHp</description>
    <label>CustomLabel_PNWvK</label>
    <nameField>
        <label>CustomLabel_PNWvK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_PNWvKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>