metadata/force-app/main/default/objects/CustomName_phcCE__c/fields/CustomField_FVGZx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_FVGZx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmHTwx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>