metadata/force-app/main/default/objects/CustomName_phcCE__c/fields/CustomField_zfaNj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zfaNj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNUUcj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>